# findyourself

./: .gitignore  .travis.yml  Makefile  manage.py  pyproject.toml  requirements.txt  setup.cfg
findyourhappiness/: asgi.py  local_settings.py.template  settings.py  urls.py  wsgi.py
index/: admin.py  forms.py  mixin.py  models.py  tests.py  track_file.py  urls.py  utils.py  views.py
index/migrations/: 0001_initial.py  0001_initial_squashed_0029_auto_20200121_1747.py  0002_auto_20200203_1159.py  0002_place_tags.py  0003_auto_20191211_1657.py  0004_auto_20191211_1659.py  0005_auto_20191211_1707.py  0006_district_region.py  0007_auto_20191212_1406.py  0008_auto_20191212_1539.py  0009_auto_20191212_1711.py  0010_auto_20191213_1055.py  0011_auto_20191213_1728.py  0012_type_title_pl.py  0013_place_create_date.py  0014_route.py  0015_auto_20191217_1745.py  0016_auto_20191218_1214.py  0017_auto_20191218_1234.py  0017_auto_20191218_1237.py  0018_auto_20191218_1236.py  0018_type_icon.py  0019_city_type_place.py  0020_remove_city_type_place.py  0021_auto_20200115_1154.py  0022_place_ig_id.py  0023_auto_20200117_1309.py  0024_remove_route_ls.py  0025_auto_20200117_1710.py  0026_auto_20200120_1152.py  0027_auto_20200120_1242.py  0028_auto_20200120_1555.py  0029_auto_20200121_1747.py
static/plugins/cluster/: MarkerCluster.css
static/plugins/icon/: MapkeyIcons.css
static/style/: leaflet.css  style.css
static_dev/plugins/icon/: MapkeyIcons.css
static_dev/style/: style.css
templates/: base.html
templates/components/: form_errors.html  form_field.html  navbar.html  place_card_mini.html  place_mini.html
templates/index/: index.html  list.html  map.html  place_create.html  place_detail.html  place_edit.html  place_form.html  place_mini.html  route_form.html
templates/user/: edit_profile.html  login.html  password_change_form.html  place_mini.html  profile.html  registration.html  user_detail.html  user_favor_place.html  user_mini.html
test_fixtures/: test.wkt  test2.wkt  test_gpx.gpx
user/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py  0001_initial_squashed_0006_auto_20200121_1747.py  0002_auto_20200115_1154.py  0003_auto_20200115_1255.py  0004_auto_20200115_1328.py  0005_auto_20200120_1555.py  0006_auto_20200121_1747.py
