[tool.poetry]
name = "findyourhappiness"
version = "0.1.0"
description = ""
authors = ["Дмитрий Стародубов <dimastbk@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.0"
django-taggit = "^1.2"
Pillow = "^6.2"
django-imagefield = "^0.8.5"
django-leaflet = "^0.26.0"
simplekml = "^1.3.1"
django-uuslug = "^1.2.0"
gpxpy = "^1.3.5"
"srtm.py" = "^0.3.4"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.13.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
