[tool.black]
target-version = ["py37"]
exclude = "migrations"
skip-string-normalization = true
line-length = 100

[tool.isort]
line_length = 100
known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
multi_line_output=3
skip = "migrations"
include_trailing_comma = true

[tool.poetry]
name = "findyourhappiness"
version = "0.1.0"
description = ""
authors = ["Дмитрий <dimastbk@yandex.ru>"]

[tool.poetry.dependencies]
python = "3.7.*"
Django = "^3.0"
django-taggit = "^1.2"
Pillow = "^6.2"
django-imagefield = "^0.8.5"
django-leaflet = "^0.26.0"
simplekml = "^1.3.1"
django-uuslug = "^1.2.0"
gpxpy = "^1.3.5"
psycopg2 = "^2.8.4"
"srtm.py" = "^0.3.4"
gunicorn = "^20.0.4"
celery = {extras = ["redis"], version = "^4.4.2"}
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
Faker = "^4.0.0"
coverage = "^5.0.3"
isort = {extras = ["pyproject"], version = "^4.3.21"}
flake8 = "^3.7.9"
flake8-quotes = "^2.1.1"
flake8-debugger = "^3.2.1"
flake8-comprehensions = "^3.2.2"
flake8-builtins = "^1.4.2"
flake8-bugbear = "^20.1.2"
flake8-bandit = "^2.1.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
